--- a/myStyle.css
+++ b/myStyle.css
@@ -22,6 +22,14 @@
 
 	}
 
+/* FONTS */
+	@font-face {
+		
+	  font-family: "cinzel"; /* name you will use in CSS */
+	  src: url("CinzelDecorative-Regular.ttf") format("truetype");
+	  /* You can add other formats for better browser support */
+		
+	}
 
 
 /* LINKS */
