--- a/myStyle.css
+++ b/myStyle.css
@@ -3,7 +3,7 @@
 	:root {
 
 	/* cinna stuff */
-		--cinnaSize: 8;
+		--cinnaSize: 5;
 		/* how big cinna will be */
 		--cinna: calc(var(--cinnaSize) * 1px);
 		/* line height for cinna */
@@ -52,6 +52,16 @@
 
 
 /* STRUCTURE */
+
+	body{
+		
+		max-width: 1500px;
+		margin-left: auto;
+		margin-right: auto;
+
+
+	}
+
 	/* ID for copyright footer */
 	#footer {
 
@@ -104,7 +114,7 @@
 		width: 29.3%;
 		padding: 15px;
 		border: 2px solid #131057;
-		margin: 20px 0px 20px 50px;
+		margin: 20px 0px 20px 20px;
 		transition-duration: 0.3s;
 
 	}
@@ -171,7 +181,7 @@
 		font-size: var(--cinna);
 		line-height: var(--lineHeight);
 		margin: var(--LRmargin);
-		width: calc(var(--cinnaSize) * 2.5%);
+		width: calc(var(--cinnaSize) * 4%);
 		padding: 0px 0px 0px 20px;
 		transition-duration: 1s;
 
