--- a/myStyle.css
+++ b/myStyle.css
@@ -225,6 +225,7 @@
 
 		float: left;
 		width: 29.3%;
+		min-height: 180px;
 		padding: 15px;
 		border: 2px solid #131057;
 		margin: 20px 0px 20px 20px;
